modificato titoli pagina, aggiunto alt text img

--- a/benessere.html
+++ b/benessere.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Oasis | Homepage</title>
+    <title>Oasis | Benessere</title>
   </head>
   <body>
     <header
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a href="index.html" class="mx-3 navbar_brand">
-          <img class=img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo">
+          <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
         <!-- Hamburger -->
@@ -126,7 +126,11 @@
             "
           >
             <div class="col-md">
-              <img class="img-fluid" src="img/Accesso_Benessere.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="img/Accesso_Benessere.jpg"
+                alt="immagine accesso al servizio"
+              />
             </div>
             <div class="col-md">
               <h2>Accesso al servizio</h2>
@@ -163,7 +167,7 @@
                   <img
                     src="img/Image1_Benessere.jpg"
                     class="img-fluid mb-4"
-                    alt="..."
+                    alt="immagine trattamenti termali"
                   />
                 </div>
                 <h3>Trattamenti termali</h3>
@@ -185,7 +189,7 @@
                   <img
                     src="img/Image-Benessere2.jpg"
                     class="img-fluid mb-4"
-                    alt="..."
+                    alt="immagine trattamenti farmacologici"
                   />
                 </div>
                 <h3>Trattamenti farmacologici</h3>
