--- a/descrizione.html
+++ b/descrizione.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Oasis | Homepage</title>
+    <title>Oasis | Descrizione</title>
   </head>
   <body>
     <header
@@ -127,7 +127,11 @@
             "
           >
             <div class="col-md col-lg-5 text-center">
-              <img class="img-fluid mb-3" src="img/img_desc1.jpg" alt="" />
+              <img
+                class="img-fluid mb-3"
+                src="img/img_desc1.jpg"
+                alt="immagine sorgensis"
+              />
             </div>
             <div class="col-md col-lg-5">
               <h3>Sorgensis</h3>
@@ -154,7 +158,11 @@
             "
           >
             <div class="col-md col-lg-5 text-center">
-              <img class="img-fluid mb-3" src="img/img_desc2.jpg" alt="" />
+              <img
+                class="img-fluid mb-3"
+                src="img/img_desc2.jpg"
+                alt="immagine centrisis"
+              />
             </div>
             <div class="col-md col-lg-5">
               <h3>Centrisis</h3>
@@ -177,7 +185,11 @@
             "
           >
             <div class="col-md col-lg-5 text-center">
-              <img class="img-fluid mb-3" src="img/img_desc3.jpg" alt="" />
+              <img
+                class="img-fluid mb-3"
+                src="img/img_desc3.jpg"
+                alt="immagine burocrasis"
+              />
             </div>
             <div class="col-md col-lg-5">
               <h3>Burocrasis</h3>
@@ -202,7 +214,7 @@
           contro il nosro sistema elitario. Se sei interessato a raggiungerci e
           ad abitare nella Culla del Tuo Futuro inviaci il form compilato.
         </p>
-        <img class="img-fluid w-100" src="img/img_desc4.jpg" alt="" />
+        <img class="img-fluid w-100" src="img/img_desc4.jpg" alt="mappa" />
       </section>
     </main>
 
