--- a/eventi.html
+++ b/eventi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Oasis | Homepage</title>
+    <title>Oasis | Eventi</title>
   </head>
   <body>
     <header
@@ -117,7 +117,11 @@
             <div class="col-md-6">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/eventi1.jpg" alt="" class="card-img" />
+                  <img
+                    src="img/eventi1.jpg"
+                    alt="immagine evento sorgente di vita"
+                    class="card-img"
+                  />
                   <div class="card-img-overlay px-0">
                     <h3 class="card-title bg-primary-alpha p-3">
                       Sorgente di Vita
@@ -149,7 +153,11 @@
             <div class="col-md-6">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/eventi2.jpg" alt="" class="card-img" />
+                  <img
+                    src="img/eventi2.jpg"
+                    alt="immagine evento cinema d'autore"
+                    class="card-img"
+                  />
                   <div class="card-img-overlay px-0">
                     <h3 class="card-title bg-primary-alpha p-3">
                       Cinema d'autore
@@ -181,7 +189,11 @@
             <div class="col-md-6">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/eventi3.jpg" alt="" class="card-img" />
+                  <img
+                    src="img/eventi3.jpg"
+                    alt="immagine evento preghiamo insieme"
+                    class="card-img"
+                  />
                   <div class="card-img-overlay px-0">
                     <h3 class="card-title bg-primary-alpha p-3">
                       Preghiamo insieme
@@ -215,7 +227,11 @@
             <div class="col-md-6">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/eventi4.jpg" alt="" class="card-img" />
+                  <img
+                    src="img/eventi4.jpg"
+                    alt="immagine evento conferenze sulla fertilità"
+                    class="card-img"
+                  />
                   <div class="card-img-overlay px-0">
                     <h3 class="card-title bg-primary-alpha p-3">
                       Conferenze sulla fertilità
