--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -127,7 +127,11 @@
         <div class="container py-5">
           <div class="row align-items-center gy-5 gx-5">
             <div class="col-md text-center">
-              <img class="img-fluid" src="./img/img_home1.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="./img/img_home1.jpg"
+                alt="immagine sezione una nuova città"
+              />
             </div>
             <div class="col-md">
               <h2 class="">Una nuova città</h2>
@@ -156,7 +160,11 @@
         <div class="container py-5">
           <div class="row flex-md-row-reverse align-items-center gy-5 gx-5">
             <div class="col-md text-center">
-              <img class="img-fluid" src="./img/img_home2.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="./img/img_home2.jpg"
+                alt="immagine sezione le nostre origini"
+              />
             </div>
             <div class="col-md">
               <h2 class="">Le nostre origini</h2>
@@ -195,12 +203,12 @@
                 <img
                   class="img-fluid float-start"
                   src="./img/img_home4.png"
-                  alt=""
+                  alt="immagine servizio istruzione"
                 />
                 <img
                   class="img-fluid float-end"
                   src="./img/img_home3.jpg"
-                  alt=""
+                  alt="immagine servizio benessere"
                 />
               </div>
             </div>
@@ -250,7 +258,11 @@
             <div class="col-md-4">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/img_home5.jpg" alt="" class="card-img" />
+                  <img
+                    src="img/img_home5.jpg"
+                    alt="immagine evento1"
+                    class="card-img"
+                  />
                   <div class="card-img-overlay">
                     <h3 class="card-title">Sorgente di vita</h3>
                     <p class="card-text small">Venerdì 17 novembre</p>
@@ -262,7 +274,11 @@
             <div class="col-md-4">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/img_home6.jpg" alt="" class="card-img" />
+                  <img
+                    src="img/img_home6.jpg"
+                    alt="immagine evento2"
+                    class="card-img"
+                  />
                   <div class="card-img-overlay">
                     <h3 class="card-title">Cinema d'autore</h3>
                     <p class="card-text small">Sabato 2 dicembre</p>
@@ -274,7 +290,11 @@
             <div class="col-md-4">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/img_home7.jpg" alt="" class="card-img" />
+                  <img
+                    src="img/img_home7.jpg"
+                    alt="immagine evento3"
+                    class="card-img"
+                  />
                   <div class="card-img-overlay">
                     <h3 class="card-title">Preghiamo insieme</h3>
                     <p class="card-text small">Ogni domenica</p>
