--- a/storia.html
+++ b/storia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -114,7 +114,11 @@
         <div class="container pt-5">
           <div class="row align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/img_storia1.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="img/img_storia1.jpg"
+                alt="immagine pandemia"
+              />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
@@ -142,7 +146,11 @@
         <div class="container pt-5">
           <div class="row flex-md-row-reverse align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/img_storia2.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="img/img_storia2.jpg"
+                alt="immagine ingegneri"
+              />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
@@ -172,7 +180,11 @@
         <div class="container pt-5">
           <div class="row align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/img_storia3.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="img/img_storia3.jpg"
+                alt="immagine progetto oasis"
+              />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
@@ -196,7 +208,11 @@
         <div class="container pt-5">
           <div class="row flex-md-row-reverse align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/img_storia4.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="img/img_storia4.jpg"
+                alt="immagine treno"
+              />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
@@ -222,7 +238,11 @@
         <div class="container pt-5">
           <div class="row flex-md-row align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/img_storia5.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="img/img_storia5.jpg"
+                alt="immagine del presente"
+              />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
