--- a/unisciti.html
+++ b/unisciti.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -129,7 +129,11 @@
             "
           >
             <div class="col-md col-lg-5 text-center">
-              <img class="img-fluid" src="img/img_unisciti1.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="img/img_unisciti1.jpg"
+                alt="immagine passi"
+              />
             </div>
             <!-- passaggi -->
             <div class="col-md col-lg-5">
