--- a/formazione.html
+++ b/formazione.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Oasis | Homepage</title>
+    <title>Oasis | Formazione</title>
   </head>
   <body>
     <header
@@ -124,7 +124,7 @@
           "
         >
           <div class="col-md">
-            <img class="img-fluid" src="img/Accesso-Formazione.jpg" alt="" />
+            <img class="img-fluid" src="img/Accesso-Formazione.jpg" alt="immagine accesso al servizio" />
           </div>
           <div class="col-md">
             <h2>Accesso al servizio</h2>
@@ -153,7 +153,7 @@
               <img
                 src="img/img-formazione1.jpg"
                 class="img-fluid mb-4"
-                alt="..."
+                alt="immagine scuola Manus"
               />
               </div>
               <h3>Manus</h3>
@@ -169,7 +169,7 @@
               <img
                 src="img/img-Intellectus.jpg"
                 class="img-fluid mb-4"
-                alt="..."
+                alt="immagine scuola Intellectus"
               />
               </div>
               <h3>Intellectus</h3>
