--- a/servizi.html
+++ b/servizi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Oasis | Homepage</title>
+    <title>Oasis | Servizi</title>
   </head>
   <body>
     <header
@@ -121,7 +121,7 @@
                 <img
                   src="img/img_servizi1.jpg"
                   class="img-fluid mb-4"
-                  alt="..."
+                  alt="immagine servizio benessere"
                 />
 
                 <h3>Benessere</h3>
@@ -144,7 +144,7 @@
                 <img
                   src="img/img_servizi2.jpg"
                   class="img-fluid mb-4"
-                  alt="..."
+                  alt="immagine servizio istruzione"
                 />
 
                 <h3>Formazione</h3>
@@ -169,23 +169,43 @@
           <h2 class="text-center">Altri servizi</h2>
           <div class="row gy-3 pt-4">
             <div class="col text-center">
-              <img class="img-fluid" src="img/icona_servizi1.png" alt="" />
+              <img
+                class="img-fluid"
+                src="img/icona_servizi1.png"
+                alt="icona pulizia dell'aria"
+              />
               <p>Pulizia dell'aria</p>
             </div>
             <div class="col text-center">
-              <img class="img-fluid" src="img/icona_servizi2.png" alt="" />
+              <img
+                class="img-fluid"
+                src="img/icona_servizi2.png"
+                alt="icona acqua potabile"
+              />
               <p>Acqua potabile</p>
             </div>
             <div class="col text-center">
-              <img class="img-fluid" src="img/icona_servizi3.png" alt="" />
+              <img
+                class="img-fluid"
+                src="img/icona_servizi3.png"
+                alt="icona guardie della disciplina"
+              />
               <p>Guardie della diciplina</p>
             </div>
             <div class="col text-center">
-              <img class="img-fluid" src="img/icona_servizi4.png" alt="" />
+              <img
+                class="img-fluid"
+                src="img/icona_servizi4.png"
+                alt="icona paesaggi naturali"
+              />
               <p>Paesaggi naturali</p>
             </div>
             <div class="col text-center">
-              <img class="img-fluid" src="img/icona_servizi5.png" alt="" />
+              <img
+                class="img-fluid"
+                src="img/icona_servizi5.png"
+                alt="icona cura della prole"
+              />
               <p>Cura della prole</p>
             </div>
           </div>
