--- a/eventi.html
+++ b/eventi.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a href="./index.html" class="mx-3 navbar_brand">
-          <img class=img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo">
+          <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
         <!-- Hamburger -->
@@ -268,7 +268,7 @@
       class="modal fade"
       id="mymodal"
       tabindex="-1"
-      aria-labelledby="exampleModalLabel"
+      aria-labelledby="mymodal"
       aria-hidden="true"
     >
       <div class="modal-dialog">
