--- a/formazione.html
+++ b/formazione.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a href="index.html" class="mx-3 navbar_brand">
-          <img class=img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo">
+          <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
         <!-- Hamburger -->
@@ -98,114 +98,146 @@
     </header>
 
     <main>
-      
       <section
-      class="hero d-flex align-items-center justify-content-start"
-      id="hero-formazione"
-    >
-      <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
-        <h1>Servizio Formazione</h1>
-        <h2 class="lead">
-          Vogliamo sviluppare appieno il tuo potenziale per rendere perfetta la generazione che dovrà ripopolare il Mondo Nuovo
-        </h2>
-      </div>
-    </section>
-
-    <section class="bg-primary py-5">
-      <div class="container py-5">
-        <div
-          class="
-            row
-            flex-md-row-reverse
-            gy-5 gy-md-0
-            gx-md-5
-            align-items-center
-            justify-content-between
-          "
-        >
-          <div class="col-md">
-            <img class="img-fluid" src="img/Accesso-Formazione.jpg" alt="immagine accesso al servizio" />
-          </div>
-          <div class="col-md">
-            <h2>Accesso al servizio</h2>
-            <p>
-              Che tu abbia 0 o 99 anni o che tu sia uomo o donna, se aspiri ad essere un cittadino di OASIS dovrai usufruire del nostro innovativo servizio di <strong>orientamento formativo</strong>. 
-              Una volta ottenute tutte le carte per accedere alla nostra città verrai sottoposto ad un <strong>test di intelligenza</strong> seguito poi da un <strong>colloquio motivazionale </strong>con i nostri professionisti
-            </p>
-          </div>
+        class="hero d-flex align-items-center justify-content-start"
+        id="hero-formazione"
+      >
+        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
+          <h1>Servizio Formazione</h1>
+          <h2 class="lead">
+            Vogliamo sviluppare appieno il tuo potenziale per rendere perfetta
+            la generazione che dovrà ripopolare il Mondo Nuovo
+          </h2>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="py-5">
-      <div class="container p-5">
-        <div class="mb-5">
-        <h2 class="text-center">Le scuole</h2>
-        <p class="lead text-center ">
-          Gli psicologi sapranno poi indicarti l’unica direzione giusta per le tue inclinazioni. 
-        </p>
-        </div>
-
-        <div class="row gy-5 gy-md-0 gx-md-5 justify-content-around">
-          <div class="col-md-5 d-flex flex-column justify-content-between">
-            <div>
-              <div class="text-center">
+      <section class="bg-primary py-5">
+        <div class="container py-5">
+          <div
+            class="
+              row
+              flex-md-row-reverse
+              gy-5 gy-md-0
+              gx-md-5
+              align-items-center
+              justify-content-between
+            "
+          >
+            <div class="col-md">
               <img
-                src="img/img-formazione1.jpg"
-                class="img-fluid mb-4"
-                alt="immagine scuola Manus"
+                class="img-fluid"
+                src="img/Accesso-Formazione.jpg"
+                alt="immagine accesso al servizio"
               />
-              </div>
-              <h3>Manus</h3>
+            </div>
+            <div class="col-md">
+              <h2>Accesso al servizio</h2>
               <p>
-                Ti interessano i <strong>lavori pratici</strong> nei quali puoi esprimere la tua manualità? Le giornate chiuso in casa davanti ai libri non fanno per te? Manus è la scuola perfetta per la tua personalità. Qui potrai acquisire le compenze necessarie a svolgere un lavoro pratico. Dal meccanico alla parrucchiera, dal fabbro all’estetista: questa è la scuola che fa per te. Inoltre ti insegneremo la difficile arte dell’<strong>ubbidienza</strong> e della <strong>disciplina</strong>. 
+                Che tu abbia 0 o 99 anni o che tu sia uomo o donna, se aspiri ad
+                essere un cittadino di OASIS dovrai usufruire del nostro
+                innovativo servizio di <strong>orientamento formativo</strong>.
+                Una volta ottenute tutte le carte per accedere alla nostra città
+                verrai sottoposto ad un
+                <strong>test di intelligenza</strong> seguito poi da un
+                <strong>colloquio motivazionale </strong>con i nostri
+                professionisti
               </p>
             </div>
           </div>
+        </div>
+      </section>
 
-          <div class="col-md-5 d-flex flex-column justify-content-between">
-            <div>
-              <div class="text-center">
-              <img
-                src="img/img-Intellectus.jpg"
-                class="img-fluid mb-4"
-                alt="immagine scuola Intellectus"
-              />
+      <section class="py-5">
+        <div class="container p-5">
+          <div class="mb-5">
+            <h2 class="text-center">Le scuole</h2>
+            <p class="lead text-center">
+              Gli psicologi sapranno poi indicarti l’unica direzione giusta per
+              le tue inclinazioni.
+            </p>
+          </div>
+
+          <div class="row gy-5 gy-md-0 gx-md-5 justify-content-around">
+            <div class="col-md-5 d-flex flex-column justify-content-between">
+              <div>
+                <div class="text-center">
+                  <img
+                    src="img/img-formazione1.jpg"
+                    class="img-fluid mb-4"
+                    alt="immagine scuola Manus"
+                  />
+                </div>
+                <h3>Manus</h3>
+                <p>
+                  Ti interessano i <strong>lavori pratici</strong> nei quali
+                  puoi esprimere la tua manualità? Le giornate chiuso in casa
+                  davanti ai libri non fanno per te? Manus è la scuola perfetta
+                  per la tua personalità. Qui potrai acquisire le compenze
+                  necessarie a svolgere un lavoro pratico. Dal meccanico alla
+                  parrucchiera, dal fabbro all’estetista: questa è la scuola che
+                  fa per te. Inoltre ti insegneremo la difficile arte
+                  dell’<strong>ubbidienza</strong> e della
+                  <strong>disciplina</strong>.
+                </p>
               </div>
-              <h3>Intellectus</h3>
-              <p>
-                Per te non esistono problemi, ma solo soluzioni? Non ti tiri indietro di fronte alla <strong>complessità</strong>, ma ti piace analizzarla in tutte le sue possibili sfaccettature? Ti definisci una persona analitica, metodica e logica?
-                Oasis ha bisogno delle tue rarissime qualità per progredire verso il <strong>futuro</strong>. Alla fine degli studi potrai scegliere tra professioni come matematico, biologo, chimico, ingegnere, informatico.
-              </p>
-            </v>
+            </div>
+
+            <div class="col-md-5 d-flex flex-column justify-content-between">
+              <div>
+                <div class="text-center">
+                  <img
+                    src="img/img-Intellectus.jpg"
+                    class="img-fluid mb-4"
+                    alt="immagine scuola Intellectus"
+                  />
+                </div>
+                <h3>Intellectus</h3>
+                <p>
+                  Per te non esistono problemi, ma solo soluzioni? Non ti tiri
+                  indietro di fronte alla <strong>complessità</strong>, ma ti
+                  piace analizzarla in tutte le sue possibili sfaccettature? Ti
+                  definisci una persona analitica, metodica e logica? Oasis ha
+                  bisogno delle tue rarissime qualità per progredire verso il
+                  <strong>futuro</strong>. Alla fine degli studi potrai
+                  scegliere tra professioni come matematico, biologo, chimico,
+                  ingegnere, informatico.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="bg-light-gray py-5">
-      <div class="container p-5">
-        <h2 class="text-center pb-4">FAQ</h2>
-        <h3 class="pb-2">Posso cambiare?</h3>
-        <p>
-          Non è possibile cambiare orientamento, poiché noi di OASIS teniamo molto alla tua <strong> stabilità psicologica</strong>. 
-        </p>
-        <h3 class="pb-2">Quanto dura?</h3>
-        <p>
-          La durata del percorso di studi varia a seconda dei <strong>tuoi anni </strong>e della necessità che abbiamo di formarti a 360 gradi e permetterti di mettere al servizio di OASIS le tue incredibili capacità. 
-        </p>
-        <h3 class="pb-2">E dopo la formazione?</h3>
-        <p>
-          Una volta terminato il periodo di apprendimento verrai immediatamente assegnato ad una <strong>posizione lavorativa perfettamente in linea</strong> con la tua personalità e con un contratto a tempo indeterminato. 
-        </p>
-      </div>
-    </section>
+      <section class="bg-light-gray py-5">
+        <div class="container p-5">
+          <h2 class="text-center pb-4">FAQ</h2>
+          <h3 class="pb-2">Posso cambiare?</h3>
+          <p>
+            Non è possibile cambiare orientamento, poiché noi di OASIS teniamo
+            molto alla tua <strong> stabilità psicologica</strong>.
+          </p>
+          <h3 class="pb-2">Quanto dura?</h3>
+          <p>
+            La durata del percorso di studi varia a seconda dei
+            <strong>tuoi anni </strong>e della necessità che abbiamo di formarti
+            a 360 gradi e permetterti di mettere al servizio di OASIS le tue
+            incredibili capacità.
+          </p>
+          <h3 class="pb-2">E dopo la formazione?</h3>
+          <p>
+            Una volta terminato il periodo di apprendimento verrai
+            immediatamente assegnato ad una
+            <strong>posizione lavorativa perfettamente in linea</strong> con la
+            tua personalità e con un contratto a tempo indeterminato.
+          </p>
+        </div>
+      </section>
     </main>
 
     <footer class="bg-secondary px-5">
       <!-- Logo -->
       <div class="text-center py-3">
-        <img src="img/LogoWhite.svg" alt="logo">
+        <img src="img/LogoWhite.svg" alt="logo" />
       </div>
       <!-- Links -->
       <nav
