--- a/unisciti.html
+++ b/unisciti.html
@@ -29,7 +29,7 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a href="index.html" class="mx-3 navbar_brand">
-          <img class=img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo">
+          <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
         <!-- Hamburger -->
@@ -217,7 +217,6 @@
                   <label class="form-label" for="messaggio">Messaggio:</label>
                   <textarea
                     class="form-control"
-                    type="text"
                     rows="3"
                     id="messaggio"
                     placeholder="Inserisci il tuo messaggio"
