--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a href="index.html" class="mx-3 navbar_brand">
-          <img class=img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo">
+          <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
         <!-- Hamburger -->
