corretti link non funzionanti e alcuni stili

--- a/descrizione.html
+++ b/descrizione.html
@@ -206,14 +206,17 @@
       </section>
 
       <section>
-        <h2 class="text-center mb-5">Dove siamo</h2>
-        <p>
-          OASIS si trova nel mezzo del Deserto Occidentale, ma la sua posizione
-          è e deve rimanere strettamente segreta per impedire che venga
-          saccheggiata o attaccata dagli abitanti del Mondo Esterno in lotta
-          contro il nosro sistema elitario. Se sei interessato a raggiungerci e
-          ad abitare nella Culla del Tuo Futuro inviaci il form compilato.
-        </p>
+        <div class="container">
+          <h2 class="text-center">Dove siamo</h2>
+          <p class="text-center mb-5">
+            OASIS si trova nel mezzo del Deserto Occidentale, ma la sua
+            posizione è e deve rimanere strettamente segreta per impedire che
+            venga saccheggiata o attaccata dagli abitanti del Mondo Esterno in
+            lotta contro il nostro sistema elitario. Se sei interessato a
+            raggiungerci e ad abitare nella Culla del Tuo Futuro inviaci il form
+            compilato.
+          </p>
+        </div>
         <img class="img-fluid w-100" src="img/img_desc4.jpg" alt="mappa" />
       </section>
     </main>
