--- a/servizi.html
+++ b/servizi.html
@@ -133,7 +133,7 @@
                   dei nostri farmaci all’avanguardia
                 </p>
               </div>
-              <a href="/benessere.html" class="small-caps"
+              <a href="./benessere.html" class="small-caps"
                 >Scopri i nostri pacchetti
                 <i class="bi-arrow-right fw-bold"></i>
               </a>
@@ -155,7 +155,7 @@
                   test attitudinale per valutare i tuoi punti di forza.
                 </p>
               </div>
-              <a href="/formazione.html" class="small-caps"
+              <a href="./formazione.html" class="small-caps"
                 >Scopri le nostre scuole
                 <i class="bi-arrow-right fw-bold"></i>
               </a>
