--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <!-- Descrizione -->
       <section>
         <div class="container py-5">
-          <div class="row align-items-center gy-5 gx-5">
+          <div class="row align-items-center gy-5 gy-md-0 gx-md-5">
             <div class="col-md text-center">
               <img
                 class="img-fluid"
@@ -158,7 +158,15 @@
       <!-- Storia -->
       <section class="bg-primary">
         <div class="container py-5">
-          <div class="row flex-md-row-reverse align-items-center gy-5 gx-5">
+          <div
+            class="
+              row
+              flex-md-row-reverse
+              align-items-center
+              gy-5 gy-md-0
+              gx-md-5
+            "
+          >
             <div class="col-md text-center">
               <img
                 class="img-fluid"
