corretto alcuni difetti di visualizzazione

--- a/descrizione.html
+++ b/descrizione.html
@@ -205,10 +205,10 @@
         </div>
       </section>
 
-      <section>
-        <div class="container">
+      <section class="bg-light-gray">
+        <div class="container pt-5 pb-3">
           <h2 class="text-center">Dove siamo</h2>
-          <p class="text-center mb-5">
+          <p class="text-center">
             OASIS si trova nel mezzo del Deserto Occidentale, ma la sua
             posizione è e deve rimanere strettamente segreta per impedire che
             venga saccheggiata o attaccata dagli abitanti del Mondo Esterno in
